crates/compiler/src/tests/e2e/bad/0561_extern_type_binding_conflict/main.gom
extern "go" "time" "Duration" type Span
extern "go" "fmt" "Stringer" type Span

fn main() -> unit {
    ()
}
